--- a/araw.html
+++ b/araw.html
@@ -185,9 +185,8 @@
         <div class="view-other-projects">
 
             <ul class="_line hover-effect">
-                <li><a href="">Previous</a></li>
-                <li><a href="">View all Projects</a></li>
-                <li><a href="">Next</a></li>
+                <li><a href="index.html#projects">View all Projects</a></li>
+                <li><a href="cinqueterre.html">Next</a></li>
             </ul>
 
             <!-- <a href="cinqueterre.html">Previous</a>
@@ -199,10 +198,9 @@
     </main>
 
 
-    <footer class="site-footer">
+    <footer class="site-footer fixed-footer">
 
-
-        <!-- <div class="eyebrow"> <strong>Projects</strong></div> -->
+        <div class="eyebrow"> <strong>angelica palilio</strong></div>
 
         <div class="row">
             <div class="one-third column">
@@ -220,13 +218,12 @@
                     </div>
                 </div>
             </div>
-
             <div class="one-third column">
                 <ul class="footer-pagenav">
 
-                    <li><a href="index.html">home</a></li>
+                    <li><a href="index.html">Home</a></li>
 
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="about.html">About</a></li>
 
                 </ul>
 
@@ -234,16 +231,17 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
 
-                    <li><a href="mailto:#">email</a></li>
+                    <li><a href="mailto:#">Email</a></li>
 
                 </ul>
 
             </div>
-
+            <div class="footer-logo-img">
+                <img src="img/png/flower-business.png" alt="" width="100" height="100">
+            </div>
         </div>
-
         <div class="legal">
 
             <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
