--- a/index.html
+++ b/index.html
@@ -1,172 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Angelica Palilio | Portfolio</title>
+<head>
+    <meta charset="UTF-8">
+    <title>Angelica Palilio | Portfolio</title>
 
-        <!-- META DESCRIPTION -->
-        <meta name="description" content="This website is my coded portfolio site that (under construction)">
+    <!-- META DESCRIPTION -->
+    <meta name="description" content="This website is my coded portfolio site that (under construction)">
 
-        <!-- META KEYWORDS -->
-        <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
+    <!-- META KEYWORDS -->
+    <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
 
-        <!-- FOR RESPONSIVE DESIGN -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FOR RESPONSIVE DESIGN -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- ADOBE FONTS -->
-        <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
+    <!-- ADOBE FONTS -->
+    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 
-        <!-- MAIN CSS -->
-        <link href="css/style.css" rel="stylesheet" type="text/css">
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
 
-    </head>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 
-    <body>
-        <header>
-            <div class="site-logo">
-                <a href="index.html">
-                    <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
-                </a>
-                <h1 class="hide-visually">angelica palilio</h1>
+</head>
+
+<body>
+    <header>
+        <div class="site-logo">
+            <a href="index.html">
+                <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
+            </a>
+            <h1 class="hide-visually">angelica palilio</h1>
+        </div>
+
+        <nav class="site-nav">
+            <ul>
+
+                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h2>
+                Designing with
+                <span>
+                    <span>purpose</span>
+                    <span>passion</span>
+                    <span>progress</span>
+                    <span>perspective</span>
+                    <span>personality</span>
+                </span>
+            </h2>
+
+            <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? </p> -->
+
+            <!-- <a href="#works" class="cta-button">View My Work</a>
+            </div> -->
+
+        </section>
+
+        <section id="projects">
+
+            <div class="works-grid">
+                <div class="works-card">
+                    <a href="araw.html">
+                        <img src="img/webp/combined-sunscreen.webp" alt="Araw Project 1 image of combined sunscreen" width="1920" height="1800" class="works-image">
+                    </a>
+                </div>
             </div>
 
-            <nav class="site-nav">
-                <ul>
+            <div class="works-grid two-column">
+                <div class="works-card">
+                    <a href="cinqueterre.html">
+                        <img src="img/webp/cinqueterre-w-bg-thumbs.webp" alt="Cinque Terre Logo" width="1920" height="1080" class="works-image">
+                    </a>
+                </div>
+                <div class="works-card">
+                    <a href="boozi.html">
+                        <img src="img/webp/boozi-thumbs.webp" alt="boozi-can" width="2700" height="2700" class="works-image">
+                    </a>
+                </div>
 
-                    <li><a href="#projects">Projects</a></li>
+            </div>
+
+            <div class="works-grid">
+                <div class="works-card">
+                    <a href="#">
+                        <img src="img/jpg/resting-mug-thumbs-2.jpg" alt="Image 4" class="works-image">
+                    </a>
+                </div>
+            </div>
+
+            <div class="works-grid two-column light">
+                <div class="works-card">
+                    <a href="#">
+                        <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="krishna logo" width="1920" height="1800" class="works-image">
+                    </a>
+                </div>
+
+                <div class="works-card">
+                    <a href="charlesandrayeames.html">
+                        <img src="img/webp/eames-cover-photo.webp" alt="Layout" width="1920" height="1800" class="works-image">
+                    </a>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
+    <footer class="site-footer fixed-footer">
+
+        <div class="eyebrow"> <strong>angelica palilio</strong></div>
+
+        <div class="row">
+            <div class="one-third column">
+                <div class="work">
+                    <div>
+
+                        <ul class="footer-worknav">
+                            <li><a href="araw.html">Araw</a></li>
+                            <li><a href="#">The Resting Mug</a></li>
+                            <li><a href="cinqueterre.html">Cinque Terre</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="#">Boozi Hard Seltzer</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="one-third column">
+                <ul class="footer-pagenav">
+
+                    <li><a href="index.html">Home</a></li>
+
                     <li><a href="about.html">About</a></li>
 
                 </ul>
-            </nav>
-        </header>
 
-        <main>
-            <section class="hero">
-                <h2>
-                    Designing with
-                    <span>
-                        <span>purpose</span>
-                        <span>passion</span>
-                        <span>progress</span>
-                        <span>perspective</span>
-                        <span>personality</span>
-                    </span>
-                </h2>
-
-                <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? </p> -->
-
-                <!-- <a href="#works" class="cta-button">View My Work</a>
-            </div> -->
-
-            </section>
-
-            <section>
-
-                <div class="works-grid">
-                    <div class="works-card">
-                        <a href="araw.html">
-                            <img src="img/webp/combined-sunscreen.webp" alt="Araw Project 1 image of combined sunscreen" width="1920" height="1800" class="works-image">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="works-grid two-column">
-                    <div class="works-card">
-                        <a href="cinqueterre.html">
-                            <img src="img/webp/cinqueterre-w-bg-thumbs.webp" alt="Cinque Terre Logo" width="1920" height="1080" class="works-image">
-                        </a>
-                    </div>
-                    <div class="works-card">
-                        <a href="boozi.html">
-                            <img src="img/webp/boozi-thumbs.webp" alt="boozi-can" width="2700" height="2700" class="works-image">
-                        </a>
-                    </div>
-
-                </div>
-
-                <div class="works-grid">
-                    <div class="works-card">
-                        <a href="#">
-                            <img src="img/jpg/resting-mug-thumbs-2.jpg" alt="Image 4" class="works-image">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="works-grid two-column light">
-                    <div class="works-card">
-                        <a href="#">
-                            <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="krishna logo" width="1920" height="1800" class="works-image">
-                        </a>
-                    </div>
-
-                    <div class="works-card">
-                        <a href="charlesandrayeames.html">
-                            <img src="img/webp/eames-cover-photo.webp" alt="Layout" width="1920" height="1800" class="works-image">
-                        </a>
-                    </div>
-                </div>
-
-            </section>
-
-        </main>
-
-        <footer class="site-footer fixed-footer">
-
-            <div class="eyebrow"> <strong>angelica palilio</strong></div>
-
-            <div class="row">
-                <div class="one-third column">
-                    <div class="work">
-                        <div>
-
-                            <ul class="footer-worknav">
-                                <li><a href="araw.html">Araw</a></li>
-                                <li><a href="#">The Resting Mug</a></li>
-                                <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                                <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                                <li><a href="#">Krishna Cow Sanctuary</a></li>
-                                <li><a href="#">Boozi Hard Seltzer</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="one-third column">
-                    <ul class="footer-pagenav">
-
-                        <li><a href="index.html">home</a></li>
-
-                        <li><a href="about.html">about</a></li>
-
-                    </ul>
-
-                </div>
-                <div class="one-third column">
-                    <ul class="footer-socialnav">
-
-                        <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">linkedin</a></li>
-
-                        <li><a href="mailto:#">email</a></li>
-
-                    </ul>
-
-                </div>
-                <div class="footer-logo-img">
-                    <img src="img/png/flower-business.png" alt="" width="100" height="100">
-                </div>
             </div>
-            <div class="legal">
+            <div class="one-third column">
+                <ul class="footer-socialnav">
 
-                <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
 
-                <div class="legal-links">
+                    <li><a href="mailto:#">Email</a></li>
 
-                </div>
+                </ul>
+
+            </div>
+            <div class="footer-logo-img">
+                <img src="img/png/flower-business.png" alt="" width="100" height="100">
+            </div>
+        </div>
+        <div class="legal">
+
+            <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+
+            <div class="legal-links">
 
             </div>
 
-        </footer>
+        </div>
 
-    </body>
+    </footer>
+
+</body>
 
 </html>
