--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 
     <!-- MAIN CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -106,20 +107,26 @@
             </div>
         </section>
 
-        <div class="one-half">
-            <h3 class="view-other-projects">View my other Projects</h3>
-            <a class="icon-hover" href="araw.html">Previous</a>
-            <a class="icon-hover" href="charlesandrayeames.html">Next</a>
+        <div class="view-other-projects">
+
+            <ul class="_line hover-effect">
+                <li><a href="araw.html">Previous</a></li>
+                <li><a href="index.html#project">View all Projects</a></li>
+                <li><a href="boozi.html">Next</a></li>
+            </ul>
+
+            <!-- <a href="cinqueterre.html">Previous</a>
+            <a class="icon-hover" href="cinqueterre.html">View all Projects</a>
+            <a href="charlesandrayeames.html">Next</a> -->
 
         </div>
 
     </main>
 
 
-    <footer class="site-footer">
+    <footer class="site-footer fixed-footer">
 
-
-        <!-- <div class="eyebrow"> <strong>Projects</strong></div> -->
+        <div class="eyebrow"> <strong>angelica palilio</strong></div>
 
         <div class="row">
             <div class="one-third column">
@@ -140,9 +147,9 @@
             <div class="one-third column">
                 <ul class="footer-pagenav">
 
-                    <li><a href="index.html">home</a></li>
+                    <li><a href="index.html">Home</a></li>
 
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="about.html">About</a></li>
 
                 </ul>
 
@@ -150,16 +157,17 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
 
-                    <li><a href="mailto:#">email</a></li>
+                    <li><a href="mailto:#">Email</a></li>
 
                 </ul>
 
             </div>
-
+            <div class="footer-logo-img">
+                <img src="img/png/flower-business.png" alt="" width="100" height="100">
+            </div>
         </div>
-
         <div class="legal">
 
             <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
