--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -1,190 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Charles and Ray Eames Editorial</title>
-    <!-- META DESCRIPTION -->
-    <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
+    <head>
+        <meta charset="UTF-8">
+        <title>Charles and Ray Eames Editorial</title>
+        <!-- META DESCRIPTION -->
+        <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
 
-    <!-- META KEYWORDS -->
-    <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
+        <!-- META KEYWORDS -->
+        <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
 
-    <!-- FOR RESPONSIVE DESIGN -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- FOR RESPONSIVE DESIGN -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- ADOBE FONTS -->
-    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
+        <!-- ADOBE FONTS -->
+        <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 
-    <!-- MAIN CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-</head>
+        <!-- MAIN CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+    </head>
 
-<body>
-    <header>
-        <div class="site-logo">
-            <a href="index.html">
-                <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
-            </a>
-            <h1 class="hide-visually">angelica palilio</h1>
-        </div>
-
-        <nav class="site-nav">
-            <ul>
-
-                <li><a href="index.html#projects">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-
-        <section class="project-hero">
-            <div class="hero-image-wrapper align-bottom">
-                <img src="img/webp/eames-chair.webp" alt="placeholder" width="1920" height="1080" />
-            </div>
-        </section>
-
-        <div class="container wide">
-            <div class="row intro">
-
-                <div class="one-fourth">
-                    <ul class="project-meta-list">
-                        <li><strong class="caps">Client:</strong> Student Project</li>
-                        <li><strong class="caps">Project Type:</strong> Editorial Layout</li>
-                        <li><strong class="caps">Software:</strong> Adobe InDesign & Photoshop</li>
-                    </ul>
-                </div>
-
-                <div class="three-fourths">
-                    <div class="container-content">
-                        <h3>Charles and Ray Eames Editorial</h3>
-
-                        <p>The goal of this project was to create multiple layouts using the same content, while keeping in mind all the rules of typography I had learned thus far. This was my first typography project that combined type with imagery, which made it both exciting and challenging. I found myself navigating the many possibilities for layout while ensuring that the integrity of the text remained clear and undistorted. It pushed me to think more critically about how type and visuals interact within a design.</p>
-                    </div>
-                </div>
-            </div>
-            </section>
-
-
-            <section>
-
-                <div class="project-grid">
-                    <div class="project-card">
-                        <img src="img/png/eames1.png" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="img/png/eames2.png" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="img/png/eames3.png" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="project-grid two-column">
-                    <div class="project-card">
-                        <img src="img/jpg/orange-chairs-editorial 2.jpg" alt="Project 7" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="img/jpg/greenchairs-editorial 2.jpg" alt="Project 8" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="img/jpg/brown-chairs-editorial.jpg" alt="Project 9" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <div class="view-other-projects">
-
-                <ul class="_line hover-effect">
-                    <li><a href="">Previous</a></li>
-                    <li><a href="index.html#projects">View all Projects</a></li>
-
-                </ul>
-
-                <!-- <a href="cinqueterre.html">Previous</a>
-                <a class="icon-hover" href="cinqueterre.html">View all Projects</a>
-                <a href="charlesandrayeames.html">Next</a> -->
-
+    <body>
+        <header>
+            <div class="site-logo">
+                <a href="index.html">
+                    <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
+                </a>
+                <h1 class="hide-visually">angelica palilio</h1>
             </div>
 
-    </main>
+            <nav class="site-nav">
+                <ul>
 
-
-    <footer class="site-footer fixed-footer">
-
-        <div class="eyebrow"> <strong>angelica palilio</strong></div>
-
-        <div class="row">
-            <div class="one-third column">
-                <div class="work">
-                    <div>
-
-                        <ul class="footer-worknav">
-                            <li><a href="araw.html">Araw</a></li>
-                            <li><a href="#">The Resting Mug</a></li>
-                            <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                            <li><a href="#">Krishna Cow Sanctuary</a></li>
-                            <li><a href="#">Boozi Hard Seltzer</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="one-third column">
-                <ul class="footer-pagenav">
-
-                    <li><a href="index.html">Home</a></li>
-
+                    <li><a href="index.html#projects">Projects</a></li>
                     <li><a href="about.html">About</a></li>
 
                 </ul>
+            </nav>
+        </header>
+
+        <main>
+
+            <section class="project-hero">
+                <div class="hero-image-wrapper align-bottom">
+                    <img src="img/webp/eames-chair.webp" alt="placeholder" width="1920" height="1080" />
+                </div>
+            </section>
+
+            <div class="container wide">
+                <div class="row intro">
+
+                    <div class="one-fourth">
+                        <ul class="project-meta-list">
+                            <li><strong class="caps">Client:</strong> Student Project</li>
+                            <li><strong class="caps">Project Type:</strong> Editorial Layout</li>
+                            <li><strong class="caps">Software:</strong> Adobe InDesign & Photoshop</li>
+                        </ul>
+                    </div>
+
+                    <div class="three-fourths">
+                        <div class="container-content">
+                            <h3>Charles and Ray Eames Editorial</h3>
+
+                            <p>The goal of this project was to create multiple layouts using the same content, while keeping in mind all the rules of typography I had learned thus far. This was my first typography project that combined type with imagery, which made it both exciting and challenging. I found myself navigating the many possibilities for layout while ensuring that the integrity of the text remained clear and undistorted. It pushed me to think more critically about how type and visuals interact within a design.</p>
+                        </div>
+                    </div>
+                </div>
+                </section>
+
+
+                <section>
+
+                    <div class="project-grid">
+                        <div class="project-card">
+                            <img src="img/png/eames1.png" alt="Project 2" class="project-image">
+                            <div class="project-overlay">
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <img src="img/png/eames2.png" alt="Project 2" class="project-image">
+                            <div class="project-overlay">
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <img src="img/png/eames3.png" alt="Project 2" class="project-image">
+                            <div class="project-overlay">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="project-grid two-column">
+                        <div class="project-card">
+                            <img src="img/jpg/orange-chairs-editorial 2.jpg" alt="Project 7" class="project-image">
+                            <div class="project-overlay">
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <img src="img/jpg/greenchairs-editorial 2.jpg" alt="Project 8" class="project-image">
+                            <div class="project-overlay">
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <img src="img/jpg/brown-chairs-editorial.jpg" alt="Project 9" class="project-image">
+                            <div class="project-overlay">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <div class="view-other-projects">
+
+                    <ul class="_line hover-effect">
+                        <li><a href="charlesandrayeames.html">Previous</a></li>
+                        <li><a href="index.html#project">View all Projects</a></li>
+                        <li><a href="cinqueterre.html">Next</a></li>
+                    </ul>
+
+                    <!-- <a href="cinqueterre.html">Previous</a>
+                        <a class="icon-hover" href="cinqueterre.html">View all Projects</a>
+                        <a href="charlesandrayeames.html">Next</a> -->
+
+                </div>
+
+        </main>
+
+
+        <footer class="site-footer fixed-footer">
+
+            <div class="eyebrow"> <strong>angelica palilio</strong></div>
+
+            <div class="row">
+                <div class="one-third column">
+                    <div class="work">
+                        <div>
+
+                            <ul class="footer-worknav">
+                                <li><a href="araw.html">Araw</a></li>
+                                <li><a href="#">The Resting Mug</a></li>
+                                <li><a href="cinqueterre.html">Cinque Terre</a></li>
+                                <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                                <li><a href="#">Krishna Cow Sanctuary</a></li>
+                                <li><a href="#">Boozi Hard Seltzer</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="one-third column">
+                    <ul class="footer-pagenav">
+
+                        <li><a href="index.html">Home</a></li>
+
+                        <li><a href="about.html">About</a></li>
+
+                    </ul>
+
+                </div>
+                <div class="one-third column">
+                    <ul class="footer-socialnav">
+
+                        <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
+
+                        <li><a href="mailto:#">Email</a></li>
+
+                    </ul>
+
+                </div>
+                <div class="footer-logo-img">
+                    <img src="img/png/flower-business.png" alt="" width="100" height="100">
+                </div>
+            </div>
+            <div class="legal">
+
+                <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+
+                <div class="legal-links">
+
+                </div>
 
             </div>
-            <div class="one-third column">
-                <ul class="footer-socialnav">
 
-                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
+        </footer>
 
-                    <li><a href="mailto:#">Email</a></li>
-
-                </ul>
-
-            </div>
-            <div class="footer-logo-img">
-                <img src="img/png/flower-business.png" alt="" width="100" height="100">
-            </div>
-        </div>
-        <div class="legal">
-
-            <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
-
-            <div class="legal-links">
-
-            </div>
-
-        </div>
-
-    </footer>
-
-
-</body>
-</body>
+    </body>
 
 </html>
