--- a/araw.html
+++ b/araw.html
@@ -182,20 +182,22 @@
 
             <!-- <h3>View my other Projects</h3> -->
 
-            <div class="view-other-projects">
+            <section>
+                <div class="container">
+                    <div class="view-other-projects">
 
-                <ul class="_line hover-effect">
-                    <li><a href="charlesandrayeames.html">Previous</a></li>
-                    <li><a href="index.html#project">View all Projects</a></li>
-                    <li><a href="cinqueterre.html">Next</a></li>
-                </ul>
+                        <ul class="_line hover-effect">
+                            <li><a href="araw.html">Previous</a></li>
+                            <li><a href="index.html#project">View all Projects</a></li>
+                            <li><a href="boozi.html">Next</a></li>
+                        </ul>
 
-                <!-- <a href="cinqueterre.html">Previous</a>
-                        <a class="icon-hover" href="cinqueterre.html">View all Projects</a>
-                        <a href="charlesandrayeames.html">Next</a> -->
-
-            </div>
-
+                        <!-- <a href="cinqueterre.html">Previous</a>
+                    <a class="icon-hover" href="cinqueterre.html">View all Projects</a>
+                    <a href="charlesandrayeames.html">Next</a> -->
+                    </div>
+                </div>
+            </section>
         </main>
 
 
