added two more html

--- a/about.html
+++ b/about.html
@@ -144,9 +144,9 @@
                         <ul class="footer-worknav">
                             <li><a href="araw.html">Araw</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                            <li><a href="#">Boozi Hard Seltzer</a></li>
-                            <li><a href="#">The Resting Mug</a></li>
-                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
+                            <li><a href="restingmug.html">The Resting Mug</a></li>
+                            <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
                         </ul>
 
