--- a/boozi.html
+++ b/boozi.html
@@ -166,7 +166,7 @@
                     <ul class="_line hover-effect">
                         <li class="prev"><a href="cinqueterre.html">Previous Project</a></li>
                         <li><a href="index.html#project">View All Projects</a></li>
-                        <li class="next"><a href="#">Next Project</a></li>
+                        <li class="next"><a href="restingmug.html">Next Project</a></li>
                     </ul>
 
                     <!-- <a href="cinqueterre.html">Previous</a>
@@ -191,8 +191,8 @@
                             <li><a href="araw.html">Araw</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
-                            <li><a href="#">The Resting Mug</a></li>
-                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="restingmug.html">Resting Mug</a></li>
+                            <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
                         </ul>
 
