added links to other pages

--- a/krishnacow.html
+++ b/krishnacow.html
@@ -44,7 +44,7 @@
     <main>
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="img/png/cinque-terre-bg-wide.png" alt="placeholder" width="1920" height="1080" />
+                <img src="https://placehold.co/600x400" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
@@ -81,7 +81,7 @@
         <section>
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="img/gif/cinque-terre-logo-wide.gif" alt="Project 1" class="project-image">
+                    <img src="https://placehold.co/600x400" alt="Project 1" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
@@ -89,7 +89,7 @@
 
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="img/webp/postage.webp" alt="Project 1" class="project-image">
+                    <img src="https://placehold.co/600x400" alt="Project 1" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
@@ -97,12 +97,12 @@
 
             <div class="project-grid two-column">
                 <div class="project-card">
-                    <img src="img/webp/mug.webp" alt="Project 2" class="project-image">
+                    <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/webp/sign-cq.webp" alt="Project 3" class="project-image">
+                    <img src="https://placehold.co/600x400" alt="Project 3" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="view-other-projects">
 
                     <ul class="_line hover-effect">
-                        <li class="prev"><a href="araw.html">Previous Project</a></li>
+                        <li class="prev"><a href="restingmug.html">Previous Project</a></li>
                         <li><a href="index.html#project">View All Projects</a></li>
                         <li class="next"><a href="boozi.html">Next Project</a></li>
                     </ul>
