--- a/restingmug.html
+++ b/restingmug.html
@@ -167,7 +167,7 @@
                     <ul class="_line hover-effect">
                         <li class="prev"><a href="boozi.html">Previous Project</a></li>
                         <li><a href="index.html#project">View All Projects</a></li>
-                        <li class="next"><a href="#">Next Project</a></li>
+                        <li class="next"><a href="krishnacow.html">Next Project</a></li>
                     </ul>
 
                     <!-- <a href="cinqueterre.html">Previous</a>
