optamized photos in Araw

--- a/araw.html
+++ b/araw.html
@@ -45,7 +45,7 @@
 
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="img/webp/combined-sunscreen-expand (1).jpg" alt="Image of three of the Araw sunscreen for adults, kids & baby's, and the facestick" width="1600" height="800" />
+                <img src="img/webp/araw-combined-sunscreen-hero.jpg" alt="Image of three of the Araw sunscreen for adults, kids & baby's, and the facestick" width="1600" height="800" />
             </div>
         </section>
 
@@ -78,7 +78,7 @@
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/gif/araw-wide-logo-1.20.gif" alt="Project 2" class="project-image">
+                        <img src="img/gif/araw-logo-wide.gif" alt="GIF of the Araw Logo" width="1318" height="731" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
@@ -104,12 +104,12 @@
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/png/araw-brand-assets-59.png" alt="Project 2" class="project-image">
+                        <img src="img/webp/araw-otter-asset.webp" alt="Araw baby sunscreen otter head asset" width="648" height="648" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
                     <div class="project-card ">
-                        <img src="img/png/araw-brand-assets-60.png" alt="Project 3" class="project-image">
+                        <img src="img/webp/araw-sun-asset.webp" alt="Araw adult and facestick sunscreen sun asset" width="648" height="648" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
@@ -117,7 +117,7 @@
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/png/araw-typeface-assets.png" alt="Project 2" class="project-image">
+                        <img src="img/webp/araw-typeface-assets.webp" alt="Araw typeface and supporting emblems" width="1318" height="731" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
@@ -125,7 +125,7 @@
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/png/araw-colors.png" alt="Project 2" class="project-image">
+                        <img src="img/webp/araw-colors.webp" alt="Araw color palette" width="1318" height="731" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
@@ -134,7 +134,7 @@
 
                 <div class="project-grid ">
                     <div class="project-card">
-                        <img src="img/gif/araw-package.gif" alt="Project 2" class="project-image">
+                        <img src="img/gif/araw-packaging-2.gif" alt="GIF of the Araw packaging" width="1920" height="1080" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
@@ -142,12 +142,12 @@
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/png/cutting-package.png" alt="Project 2" class="project-image">
+                        <img src="img/webp/araw-packagecutting.webp" alt="Photo of Angelica cutting out package design versions" width="1920" height="1080" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
                     <div class="project-card ">
-                        <img src="img/jpg/packaged-printed.jpg" alt="Project 3" class="project-image">
+                        <img src="img/webp/araw-package-print.webp" alt="Photo of final package design being printed" width="" height="" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
@@ -155,7 +155,7 @@
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
+                        <img src="img/webp/araw-adult-sunscreen.webp" alt="Image of Araw adult sunscreen" width="" height="" class="project-image">
                         <div class="project-overlay">
 
                         </div>
@@ -164,12 +164,12 @@
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
+                        <img src="img/webp/araw-facestick.webp" alt="Image of Araw face stick sunscreen" width="" height="" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
+                        <img src="img/webp/araw-baby-sunscreen.webp" alt="Image of Araw baby sunscreen" width="" height="" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
