--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/webp/sign-cq.webp" alt="Project 3" class="project-image">
+                    <img src="img/webp/cinqueterre-sign.webp" alt="Project 3" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
