--- a/restingmug.html
+++ b/restingmug.html
@@ -54,7 +54,7 @@
                 <div class="one-fourth">
                     <ul class="project-meta-list">
                         <li><strong class="caps">Client:</strong> Student Project</li>
-                        <li><strong class="caps">Project Type:</strong> Brand Identity</li>
+                        <li><strong class="caps">Project Type:</strong>Brand Identity</li>
                         <li><strong class="caps">Software:</strong> Adobe Illustrator, Photoshop, & InDesign</li>
                     </ul>
                 </div>
@@ -72,32 +72,28 @@
         </section>
 
         <section>
+            <div class="project-grid two-column">
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+            </div>
 
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="GIF of before and after the fruits are colored" width="1318" height="713" class="project-image">
+                    <img src="img/png/restingmug-colors.png" alt="Resing Mug color Palette" width="1318" height="713" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
             </div>
 
-            <div class="project-grid three-column">
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 7" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 8" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 9" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
+
             <div class="project-grid">
                 <div class="project-card">
                     <img src="img/jpg/restingmug-smpost.jpg" alt="Social Media Post for the Resting Mug" width="" height="" class="project-image">
@@ -105,6 +101,7 @@
                     </div>
                 </div>
             </div>
+
 
             <div class="project-grid two-column">
                 <div class="project-card">
