made minor changes to footer, view other projects, and about page

--- a/araw.html
+++ b/araw.html
@@ -57,6 +57,7 @@
                         <li><strong class="caps">Client:</strong> Student Project</li>
                         <li><strong class="caps">Project Type:</strong> Brand Identity</li>
                         <li><strong class="caps">Software:</strong> Adobe Illustrator and Photoshop</li>
+                        <li><img class="pele-icon" src="img/svg/pele-icon.svg" alt="Pele Icon" width="10" height="8"> Pele Finalist</li>
                     </ul>
                 </div>
 
@@ -192,18 +193,17 @@
                         <li class="next"><a href="cinqueterre.html">Next Project</a></li>
                     </ul>
 
-                    <!-- <a href="cinqueterre.html">Previous</a>
-                    <a class="icon-hover" href="cinqueterre.html">View all Projects</a>
-                    <a href="charlesandrayeames.html">Next</a> -->
                 </div>
             </div>
         </section>
+
     </main>
+
 
 
     <footer class="site-footer fixed-footer">
 
-        <div class="eyebrow"> <strong>angelica palilio</strong></div>
+        <div class="eyebrow"> <img src="img/svg/name-logo.svg" alt="svg of my name logo" width="300" height="47"> </div>
 
         <div class="row">
             <div class="one-third column">
