--- a/about.html
+++ b/about.html
@@ -53,13 +53,19 @@
                         <li>Email: angelicapal003 at gmail.com</li>
                     </ul>
 
-                    <li><a class="a-button" href="#" target="_blank">Resume</a></li>
+                    <li><a class="a-button" href="#" target="_blank">Resume
+                            <i class="fa-solid fa-arrow-up-right-from-square" aria-hidden="true"></i>
+                        </a></li>
 
                 </div>
 
                 <div class="col-8">
                     <h2>Hello!</h2>
-                    <p>I'm Angelica and a <em>graphic designer</em> based in <strong>Honolulu, Hawaii.</strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic molestias accusamus est in quis optio voluptatem beatae placeat eos provident. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab vel officiis illo neque corporis. Fuga ut eius fugiat voluptas omnis cupiditate nobis. Iure ipsum sequi est amet voluptates expedita nemo. Pariatur ipsa iure exercitationem dolores aliquid iusto beatae minus tempora.</p>
+                    <p>I'm Angelica and a <em>graphic designer</em> based in <strong>Honolulu, Hawaii.</strong> With a strong foundation in design principles, I bring a blend of creativity, precision, and dedication to every project. I am passionate about creating visually compelling work that not only meets deadlines but also reflects a meticulous attention to detail. Continuously driven to evolve, I make it a priority to stay inspired by exploring new techniques, tools, and trends to refine my craft.</p>
+
+                    <p>Collaboration and communication are central to my design process, ensuring that each project is not only aligned with the brand&apos;s vision but also resonates deeply with its audience. I thrive in environments where creativity and teamwork come together, and I approach every challenge with an open mind and a commitment to excellence.</p>
+
+                    <p>Outside of design, I enjoy a slower pace of life, often unwinding by baking or getting lost in a good book. I also find peace and inspiration by sitting at the beach, enjoying the sunset, and reflecting on the world around me. These moments of tranquility allow me to recharge and bring fresh ideas into my professional work.</p>
 
                     <div class="row">
                         <div class="one-half">
@@ -188,6 +194,9 @@
         </div>
 
     </footer>
+
+    <!-- ICON FILE -->
+    <script src="https://kit.fontawesome.com/68d6b5750a.js" crossorigin="anonymous"></script>
 
 </body>
 
