made edits to footer

--- a/boozi.html
+++ b/boozi.html
@@ -177,7 +177,7 @@
 
     <footer class="site-footer fixed-footer">
 
-        <div class="eyebrow"> <strong>angelica palilio</strong></div>
+        <div class="eyebrow"> <img src="img/svg/name-logo.svg" alt="svg of my name logo" width="300" height="47"> </div>
 
         <div class="row">
             <div class="one-third column">
