--- a/restingmug.html
+++ b/restingmug.html
@@ -87,7 +87,7 @@
 
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="img/png/restingmug-colors.png" alt="Resing Mug color Palette" width="1318" height="713" class="project-image">
+                    <img src="img/png/restingmug-colors.png" alt="Resing Mug color Palette" width="1920" height="1065" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
@@ -96,7 +96,7 @@
 
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="img/jpg/restingmug-smpost.jpg" alt="Social Media Post for the Resting Mug" width="" height="" class="project-image">
+                    <img src="img/jpg/restingmug-socialmedia.jpg" alt="Social Media Post for the Resting Mug" width="1920" height="1080" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
@@ -175,7 +175,7 @@
 
     <footer class="site-footer fixed-footer">
 
-        <div class="eyebrow"> <strong>angelica palilio</strong></div>
+        <div class="eyebrow"> <img src="img/svg/name-logo.svg" alt="svg of my name logo" width="300" height="47"> </div>
 
         <div class="row">
             <div class="one-third column">
