optimized and added content to Cinque Terre

--- a/araw.html
+++ b/araw.html
@@ -85,22 +85,22 @@
                     </div>
                 </div>
 
-                <div class="project-grid three-column">
+                <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="https://placehold.co/600x400" alt="Project 7" class="project-image">
+                        <img src="img/jpg/araw-inkdrop.jpg" alt="GIF of the Araw Logo" width="1920" height="730" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="https://placehold.co/600x400" alt="Project 8" class="project-image">
+                        <img src="img/jpg/araw-fingerprint.jpg" alt="GIF of the Araw Logo" width="1920" height="730" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
-                    <div class="project-card">
-                        <img src="https://placehold.co/600x400" alt="Project 9" class="project-image">
+                    <!-- <div class="project-card">
+                        <img src="https://placehold.co/400x400" alt="Project 9" class="project-image">
                         <div class="project-overlay">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="project-grid two-column">
