--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -74,17 +74,17 @@
 
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/png/eames1.png" alt="Project 2" class="project-image">
+                        <img src="img/webp/eames1.webp" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="img/png/eames2.png" alt="Project 2" class="project-image">
+                        <img src="img/webp/eames2.webp" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="img/png/eames3.png" alt="Project 2" class="project-image">
+                        <img src="img/webp/eames3.webp" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
