--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
                 <div class="col-8">
                     <h2>Hello!</h2>
-                    <p>I'm Angelica and a <em>graphic designer</em> based in <strong>Honolulu, Hawaii.</strong> With a strong foundation in design principles, I bring a blend of creativity, precision, and dedication to every project. I am passionate about creating visually compelling work that not only meets deadlines but also reflects a meticulous attention to detail. Continuously driven to evolve, I make it a priority to stay inspired by exploring new techniques, tools, and trends to refine my craft.</p>
+                    <p>I'm Angelica a <em>graphic designer</em> based in <strong>Honolulu, Hawaii.</strong> With a strong foundation in design principles, I bring a blend of creativity, precision, and dedication to every project. I am passionate about creating visually compelling work that not only meets deadlines but also reflects a meticulous attention to detail. Continuously driven to evolve, I make it a priority to stay inspired by exploring new techniques, tools, and trends to refine my craft.</p>
 
                     <p>Collaboration and communication are central to my design process, ensuring that each project is not only aligned with the brand&apos;s vision but also resonates deeply with its audience. I thrive in environments where creativity and teamwork come together, and I approach every challenge with an open mind and a commitment to excellence.</p>
 
