--- a/boozi.html
+++ b/boozi.html
@@ -137,7 +137,7 @@
 
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="img/jpg/boozi-can-poolside.jpg" alt="Project 4" class="project-image">
+                    <img src="img/webp/boozi-poolside.webp" alt="Project 4" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
