--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -44,7 +44,7 @@
     <main>
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="img/png/cinque-terre-bg-wide.png" alt="placeholder" width="1920" height="1080" />
+                <img src="img/webp/cinqueterre-hero.webp" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
@@ -79,17 +79,31 @@
 
 
         <section>
-            <div class="project-grid">
+
+            <div class="project-grid two-column">
                 <div class="project-card">
-                    <img src="img/gif/cinque-terre-logo-wide.gif" alt="Project 1" class="project-image">
+                    <img src="img/webp/cinqueterre-logo-black.webp" alt="Cinque Terre Black Logo" width="216" height="216" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <img src="img/webp/cinqueterre-logo-color.webp" alt="Cinque Terre Logo typefaces and color" width="216" height="216" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
             </div>
+            <!-- <div class="project-grid">
+                <div class="project-card">
+                    <img src="img/gif/cinqueterre-logo-wide.gif" alt="GIF of the Cinque Terre Logo" width="" height="" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+            </div> -->
 
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="img/webp/postage.webp" alt="Project 1" class="project-image">
+                    <img src="img/webp/cinqueterre-sketch.webp" alt="Sketches of anchovies" width="1920" height="1080" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
@@ -97,12 +111,34 @@
 
             <div class="project-grid two-column">
                 <div class="project-card">
-                    <img src="img/webp/mug.webp" alt="Project 2" class="project-image">
+                    <img src="img/webp/cinqueterre-typeface-colors.webp" alt="Cinque Terre Logo typefaces and color" width="648" height="648" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <img src="img/webp/cinqueterre-logoevolve.webp" alt="Cinque Terre Logo Evolution" width="648" height="648" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-grid">
+                <div class="project-card">
+                    <img src="img/webp/cinqueterre-postage.webp" alt="Cinque Terre postage mockup" width="1080" height="721" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-grid two-column">
+                <div class="project-card">
+                    <img src="img/webp/cinqueterre-mug.webp" alt="Cinque Terre Logo mug mockup" width="1080" height="810" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/webp/cinqueterre-sign.webp" alt="Project 3" class="project-image">
+                    <img src="img/webp/cinqueterre-cliffside.webp" alt="Cinque Terre Street Sign" width="1080" height="810" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
